--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PORT = 5000
 DB_URI = mongodb+srv://nv22093:eR7JniHLBKddUpYj@cluster0.nncpzgw.mongodb.net/?retryWrites=true&w=majority
 JWT_SECRET = 123456
-```
+NODE_ENV = development
